<resources>
    <string name="app_name">FaceVoiceApp</string>
    <string name="auth">Authenticate</string>
    <string name="nxt">Next</string>
    <string name="log">Login</string>
    <string name="reg">Register</string>
    <string name="hello">Hello!</string>
    <string name="cont">Continue</string>
    <string name="prompt_auth">Please face the camera and speak the OTP</string>
    <string name="prompt_reg">Please face the camera and press the DETECT button to begin face registration</string>
    <string name="existing_user">Existing user?</string>
    <string name="welcome">WELCOME</string>
    <string name="enter_username">Enter Username</string>
    <string name="name">Name :</string>
    <string name="enter_age">Enter Age</string>
    <string name="age">Age :</string>
    <string name="detect">Detect</string>
    <string name="finish">Finish</string>
    <string name="record">Record</string>
    <string name="prompt_record_voice">Hold the Record button and read the number displayed</string>
    <string name="progress">PROGRESS</string>
    <string name="upload">UPLOAD</string>
    <string name="otp">OTP</string>
    <string name="results">RESULTS</string>
    <string name="try_again">TRY AGAIN</string>
</resources>