<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100sp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:text="USER INFO"
        android:textSize="50sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="20sp"
        android:textAppearance="Bold"
        android:layout_marginHorizontal="20sp"
        android:paddingHorizontal="10sp"
        android:layout_marginTop="100sp"/>
    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_username"
        android:textSize="20sp"
        android:paddingHorizontal="10sp"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="5sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textSize="20sp"
        android:textAppearance="Bold"
        android:layout_marginHorizontal="20sp"
        android:paddingHorizontal="10sp"
        android:layout_marginTop="10sp"/>
    <EditText
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_age"
        android:textSize="20sp"
        android:paddingHorizontal="10sp"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="5sp"/>
    <Button
        android:id="@+id/cont_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cont"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginTop="20sp"
        android:layout_marginHorizontal="40sp"
        />

</LinearLayout>