<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50sp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:text="@string/welcome"
        android:textSize="50sp" />

    <ImageView
        android:id="@+id/image_main"
        android:layout_width="match_parent"
        android:layout_height="200sp"
        android:layout_marginTop="25sp"
        app:srcCompat="@drawable/biometric"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40sp"
        android:layout_marginTop="50sp"
        android:text="@string/existing_user"
        android:textStyle="bold"
        />
    <Button
        android:id="@+id/log_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginTop="10sp"
        android:layout_marginHorizontal="40sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40sp"
        android:layout_marginTop="20sp"
        android:text="New User?"
        android:textStyle="bold"
        />
    <Button
        android:id="@+id/reg_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reg"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginTop="10sp"
        android:layout_marginHorizontal="40sp"
        />


</LinearLayout>