<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterCam">
    <com.otaliastudios.cameraview.CameraView
        android:id="@+id/camera"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="500sp"
        android:layout_margin="10sp"
        android:keepScreenOn="true"
        app:cameraEngine="camera1"
        app:cameraPreview="glSurface"
        app:cameraPreviewFrameRate="30"
        app:cameraFacing="front"
        app:cameraFlash="off"
        app:cameraAudio="on"
        app:cameraSnapshotMaxWidth="500"
        app:cameraSnapshotMaxHeight="500"
        app:cameraVideoCodec="deviceDefault"
        app:cameraVideoSizeAspectRatio="1:1"
        />

    <TextView
        android:id="@+id/prompt_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prompt_reg"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_margin="10sp"
        />

    <Button
        android:id="@+id/detect_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detect"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="40sp"
        />
    <Button
        android:id="@+id/nxt_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10sp"
        android:layout_marginHorizontal="40sp"
        />

</LinearLayout>