<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterVoice">
    <!--    <com.cleveroad.audiovisualization.GLAudioVisualizationView-->
    <!--        xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--        xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--        android:id="@+id/visualizer_view"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        app:av_bubblesSize="@dimen/bubble_size"-->
    <!--        app:av_bubblesRandomizeSizes="true"-->
    <!--        app:av_wavesHeight="@dimen/wave_height"-->
    <!--        app:av_wavesFooterHeight="@dimen/footer_height"-->
    <!--        app:av_wavesCount="7"-->
    <!--        app:av_layersCount="4"-->
    <!--        app:av_backgroundColor="@color/av_color_bg"-->
    <!--        app:av_bubblesPerLayer="16"-->
    <!--        />-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="20sp"
        android:gravity="center"
        android:text="@string/prompt_record_voice"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100sp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:text="NUMBER"
        android:textSize="50sp" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@android:style/Widget.DeviceDefault.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="50sp"
        android:progress="0"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/progress"/>

    <Button
        android:id="@+id/rec_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="40sp"
        android:layout_marginTop="50sp"
        android:text="@string/record" />

    <Button
        android:id="@+id/fin_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="40sp"
        android:layout_marginTop="10sp"
        android:text="@string/finish" />


</LinearLayout>